--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <html>
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <script src="script.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css" />
-  </head>
+</head>
 
-  <body>
+<body>
     <h1>Ejercicio 2</h1>
     <h2>Lista 1</h2>
     <ul id="list1">
-      <li><span>texto ejemplo 1</span></li>
-      <li><span>texto ejemplo 2</span></li>
-      <li><span class="selected">texto ejemplo 3</span></li>
-      <li><span>texto ejemplo 4</span></li>
-      <li><span>texto ejemplo 5</span></li>
+        <li><span>texto ejemplo 1</span></li>
+        <li><span>texto ejemplo 2</span></li>
+        <li><span class="selected" id="selected">texto ejemplo 3</span></li>
+        <li><span>texto ejemplo 4</span></li>
+        <li><span>texto ejemplo 5</span></li>
     </ul>
     <h2>Lista 2</h2>
     <ul id="list2"></ul>
-    <p id="valueInput"></p>
-  </body>
+</body>
+
 </html>
